<resources>
    <string name="app_name">CastroApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>

    <!-- Drawer menu-->
    <string name="events">Events</string>
    <string name="players">Wrestlers</string>
    <string name="games">Table</string>
    <string name="arena">Arena</string>
    <string name="about_us">About us</string>
    <string name="pictures">Pictures</string>
    <string name="videos">Videos</string>
    <string name="sponsors">Sponsors</string>

    <!--SeasonInfo fragment-->
    <string name="results">Results</string>
    <string name="table">Table</string>
    <string name="imagesContentDescription">share_image</string>

    <!--Errors-->
    <string name="base_error_empty_videos">The list with the videos is empty</string>
    <string name="base_error_empty_images">The list with the images is empty</string>
    <string name="base_error_empty_events">The list with the events is empty</string>
    <string name="base_error_empty_players">The list with the wrestlers is empty</string>
    <string name="base_error_empty_games">The list with the wrestlings is empty</string>
    <string name="base_error_empty_sponsors">The list with the sponsors is empty</string>
    <string name="base_error_empty_arena">The list with the arena is empty</string>
    <string name="base_error_empty_aboutus">The list with the club is empty</string>
    <string name="base_error_no_data_videos">Apologize, the data to open the video are missing</string>
    <string name="base_error_no_data_images">Apologize, the data to open the image are missing</string>
    <string name="base_error_no_data_events">Apologize, the data to open the information about the event are missing</string>
    <string name="base_error_no_data_players">Apologize, the data to open the information about the wrestler are missing</string>
    <string name="base_error_no_data_games">Apologize, the data to open the information about the wrestling are missing</string>
    <string name="base_error_no_data_sponsors">Apologize, the data to open the information about the sponsor are missing</string>
    <string name="base_error_no_data_arena">Apologize, the data to open the information about the arena are missing</string>
    <string name="base_error_no_data_aboutus">Apologize, the data to open the informatoin about the club are missing</string>
    <string name="base_error_restful_videos">There was an error obtaining the data of the videos </string>
    <string name="base_error_restful_images">There was an error obtaining the data of the images </string>
    <string name="base_error_restful_events">There was an error obtaining the data of the events </string>
    <string name="base_error_restful_players">There was an error obtaining the data of the wrestlers </string>
    <string name="base_error_restful_games">There was an error obtaining the data of the wrestlings </string>
    <string name="base_error_restful_sponsors">There was an error obtaining the data of the sponsors </string>
    <string name="base_error_restful_arena">There was an error obtaining the data of the arena </string>
    <string name="base_error_restful_aboutus">There was an error obtaining the data of the club </string>
    <string name="error">There was an error</string>
    <string name="error_no_phone_number">There is no phone number. You can\'t call right now</string>

    <!-- Players -->
    <string name="senior">Senior</string>
    <string name="cadet">Cadet</string>
    <string name="junior">Junior</string>


    <!-- Event -->
    <string name="shareText">Check this out! On %1$s at %2$s, %3$s. It cost %4$s</string>
    <string name="notificationText">Don\'t forget. In 4 hours will be held the event %1$s.</string>
    <string name="notification_scheduled">I will notify you 4 hours before the event.</string>
    <string name="remind_title">Reminder</string>

    <string name="settings_text">App made fondly by AyoPrez. \n\n
    For more information, visit the website:</string>

</resources>
