<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/games" />
        <item
            android:id="@+id/nav_players"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/players" />
        <item
            android:id="@+id/nav_arena"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/arena" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/pictures" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/videos" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sponsors" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
